--- a/do_one_thing/Gemfile
+++ b/do_one_thing/Gemfile
@@ -44,5 +44,6 @@ group :development do
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
   gem 'spring'
 end
-
+gem 'activeadmin', github: 'activeadmin'
 gem 'foundation-rails', '~> 6.2.1'
+gem 'devise'
