--- a/do_one_thing/config/database.yml
+++ b/do_one_thing/config/database.yml
@@ -5,21 +5,30 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
-  pool: 5
-  timeout: 5000
+  adapter: postgresql
+  encoding: unicode
+  pool: 5	
+  
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: test_dev
+  username: developer
+  password: dev
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: test
+  username: tester
+  password: test
+
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: master #Database name
+ 
+
+
