--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -21,3 +21,9 @@ test:
 # instead read values from the environment.
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+   s3:
+     :bucket: ENV["S3_BUCKET_NAME"]
+     :access: ENV["AWS_ACCESS_KEY_ID"]
+     :secret: ENV["AWS_SECRET_ACCESS_KEY"]
+
+
