--- a/config/database.yml
+++ b/config/database.yml
@@ -13,17 +13,12 @@ default: &default
 development:
   <<: *default
   database: test_dev
-  username: developer
+  username: development
   password: dev
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
-  <<: *default
-  database: test
-  username: tester
-  password: test
 
 
 production:
