--- a/config/database.yml
+++ b/config/database.yml
@@ -13,8 +13,8 @@ default: &default
 development:
   <<: *default
   database: test_dev
-  username: development
-  password: dev
+  username: James	
+  password: 
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
