--- a/config/database.yml
+++ b/config/database.yml
@@ -1,9 +1,5 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
+# We use postgresql
+
 default: &default
   adapter: postgresql
   encoding: unicode
